# may_store

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  migration_wishes_created_by_to_group_id.sql  readme.md
docs/: game-ws-backend.md  tencent-im-backend.md  小游戏功能说明（腾讯云_im_实时多人游戏方案）.md
src/: cache.rs  errors.rs  main.rs  migration_tags_update.sql  openapi.rs  routes.rs  schema_v2_pg.sql  utils.rs
src/dashboard/: activities.rs  metrics.rs  mod.rs  view.rs
src/foods/: delete.rs  mod.rs  new.rs  update.rs  view.rs
src/game_im/: mod.rs  rest.rs  rooms.rs  sign.rs  werewolf.rs
src/game_ws/: mod.rs
src/models/: dashboard.rs  foods.rs  game_im.rs  game_ws.rs  invitation.rs  mod.rs  orders.rs  upload.rs  users.rs  wishes.rs  wx_official.rs
src/orders/: delete.rs  expiration.rs  footprints.rs  mod.rs  new.rs  rating.rs  update.rs  view.rs
src/services/: mod.rs  notifications.rs
src/upload/: upload.rs
src/users/: checkin.rs  group_update.rs  invitation.rs  mod.rs  new.rs  role.rs  update.rs  view.rs
src/wishes/: checkin.rs  claim.rs  delete.rs  mod.rs  new.rs  update.rs  view.rs
src/wx_official/: auth.rs  mod.rs  send_to_user.rs  verify.rs
