[package]
name = "may-store"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"]}
ntex = { version = "2.1", features = ["tokio", "cookie"] }
ntex-multipart = "2.0.0" ## 处理表单数据

sqlx = { version = "0.8.0", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "macros", 
    "chrono", 
    "mysql", 
    "sqlite"
]} #数据库驱动，用于连接数据库

reqwest = { version = "0.12", features = ["json"]}
chrono = { version = "0.4.23", features = ["serde"] }   #时间日期库，用来处理date
cookie = "0.18.1"
dotenvy = "0.15.6"  #读取.env文件并把里面的键值对加载进环境变量
log = "0.4"
env_logger = "0.11.5"
idgenerator = "2.0.0" #雪花id
serde = { version = "1.0.152", features = ["derive"] }  #序列化库，处理json
serde_json = "1.0.91"   #反序列化json
jsonwebtoken = "9.3.0" ## jwt
futures-util = "0.3"
futures = "0.3"
serde-xml-rs = "0.6.0" ## xml
qiniu-sdk = "0.2.3" ##七牛云
qiniu-upload-manager = "0.2.3"
qiniu-upload-token = { version = "0.2.4", features = ["async"] }
lazy_static = "1.4"
rust-crypto = "0.2.36"  # 加密
rand = "0.8.5" # 随机
